--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,11 @@
     <groupId>ru.geekbrains</groupId>
     <artifactId>chatNioMaven</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <packaging>jar</packaging>
+    <modules>
+        <module>client</module>
+        <module>server</module>
+    </modules>
+    <packaging>pom</packaging>
 
     <properties>
             <maven.compiler.sourse>1.8</maven.compiler.sourse>
